refactored setTimeout in showCompMove(). Added height to h1 to prevent collapse on end of the computer's turn.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,6 +6,7 @@ h1 {
   font-size: 7em;
   margin: 0.2em auto;
   padding: 0;
+  height: 132px;
 }
 h2 {
   font-size: 3.5em;
